5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4330/executions/1680_2471.log
== TEST (2019-05-02 13:31:27) 
-- CODE:
Idade=int(input("Insira a idade: "))
IMC=float(input("Indice de massa corporal: "))

if ((Idade == 0) and (Idade > 130)):
	print("Entradas:",Idade,"anos e IMC",IMC)
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Risco: Baixo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:31:31) 
-- CODE:
Idade=int(input("Insira a idade: "))
IMC=float(input("Indice de massa corporal: "))

if ((Idade == 0) and (Idade > 130)):
	print("Entradas:",Idade,"anos e IMC",IMC)
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Risco: Baixo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:31:33) 
-- CODE:
Idade=int(input("Insira a idade: "))
IMC=float(input("Indice de massa corporal: "))

if ((Idade == 0) and (Idade > 130)):
	print("Entradas:",Idade,"anos e IMC",IMC)
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Risco: Baixo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:32:13) 
-- CODE:
Idade=int(input("Insira a idade: "))
IMC=float(input("Indice de massa corporal: "))

if ((Idade == 0) and (Idade > 130)):
	print("Entradas:",Idade,"anos e IMC",IMC)
	print("Dados invalidos")
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Risco: Baixo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:32:40) 
-- CODE:
Idade=int(input("Insira a idade: "))
IMC=float(input("Indice de massa corporal: "))

if ((Idade == 0) and (Idade > 130)):
	print("Entradas:",Idade,"anos e IMC",IMC)
	print("Dados invalidos")
elif
-- ERROR:
File "XXXX", line 7
    elif
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:33:18) 
-- CODE:
Idade=int(input("Insira a idade: "))
IMC=float(input("Indice de massa corporal: "))

if ((Idade == 0) and (Idade > 130)):
	print("Entradas:",Idade,"anos e IMC",IMC)
	print("Dados invalidos")

-- ERROR:
File "XXXX", line 7
    elif
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:33:22) 
-- CODE:
Idade=int(input("Insira a idade: "))
IMC=float(input("Indice de massa corporal: "))

if ((Idade == 0) and (Idade > 130)):
	print("Entradas:",Idade,"anos e IMC",IMC)
	print("Dados invalidos")

-- ERROR:
File "XXXX", line 7
    elif
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:34:04) 
-- CODE:
idade=int(input("Insira a idade: "))
IMC=float(input("Indice de massa corporal: "))

if ((idade == 0) and (idade > 130)):
	print("Entradas:",Idade,"anos e IMC",IMC)
	print("Dados invalidos")

-- ERROR:
File "XXXX", line 7
    elif
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:34:10) 
-- CODE:
idade=int(input("Insira a idade: "))
IMC=float(input("Indice de massa corporal: "))

if ((idade == 0) and (idade > 130)):
	print("Entradas:",Idade,"anos e IMC",IMC)
	print("Dados invalidos")

-- ERROR:
File "XXXX", line 7
    elif
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:34:10) 
-- CODE:
idade=int(input("Insira a idade: "))
IMC=float(input("Indice de massa corporal: "))

if ((idade == 0) and (idade > 130)):
	print("Entradas:",Idade,"anos e IMC",IMC)
	print("Dados invalidos")

-- ERROR:
File "XXXX", line 7
    elif
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:34:11) 
-- CODE:
idade=int(input("Insira a idade: "))
IMC=float(input("Indice de massa corporal: "))

if ((idade == 0) and (idade > 130)):
	print("Entradas:",Idade,"anos e IMC",IMC)
	print("Dados invalidos")

-- ERROR:
File "XXXX", line 7
    elif
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
